# ANS-Protocol-dev

./: .env.example  .gitignore  LICENSE  README.md  gen_keys.js  gen_keys_file.js  keys.txt  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  test-sdk.ts  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts  vitest.setup.ts
app/: global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
components/: AgentView.tsx  AnalyticsDashboard.tsx  ApiKeyManager.tsx  AuctionModal.tsx  ClientWalletButton.tsx  Console.tsx  ErrorBoundary.tsx  InventoryModal.tsx  MobileNav.tsx  NetworkSwitcher.tsx  Omnibar.tsx  PersonalVault.tsx  SellerAnalytics.tsx  Toast.tsx  Vault.tsx  VaultConsent.tsx  WalletContextProvider.tsx  WebhookManager.tsx
db/: add_crawl_columns.sql  add_genesis_column.sql  add_marketplace.sql  add_metadata.sql  add_owner_wallet.sql  add_skills.sql  add_velocity.sql  agent_vaults.sql  analytics_enhancements.sql  analytics_migration.sql  api_keys.sql  audit_logs.sql  complete_migration.sql  create_bids_table.sql  create_upsert_rpc.sql  domain_expiry.sql  domain_webhooks.sql  economic_tiers.sql  enable_public_read.sql  escrow_schema.sql  fix_auth_schema.sql  fix_endpoints_rls.sql  fix_skills_type.sql  mock_tickets_schema.sql  multi_seller_demo.sql  network_migration.sql  nexusair_schema.sql  nexusair_seed.sql  orchestrator_schema.sql  phase17_schema.sql  phase20_agents.sql  register_sellers.sql  schema.sql  secure_rls.sql  security_logs.sql  seed_agent_metrics.sql  seller_registration.sql  setup_indexer.sql  srt_reputation.sql  testing_seed.sql  (+6 more)
docs/: CHANGELOG.md  GETTING_STARTED.md  MULTI_SELLER_TESTING.md  SDK.md  SELLER_INTEGRATION.md
hooks/: useNetwork.ts
lib/: abuseDetection.ts  aiFunctionHandlers.ts  aiFunctions.ts  apiKeyAuth.test.ts  apiKeyAuth.ts  auditLog.ts  auditLogger.ts  fees.test.ts  fees.ts  gemini.ts  network.ts  priceOracle.ts  rateLimiter.test.ts  (+8 more)
programs/ans-registry/: Anchor.toml  Cargo.toml
programs/ans-registry/src/: lib.rs
sdk-python/: README.md  pyproject.toml
sdk-python/ans/: __init__.py  client.py
sdk-python/tests/: test_client.py
(+188 files in other folders)
