[package]
name = "ans-registry"
version = "0.1.0"
description = "ANS - Agent Name Service: On-chain domain registry for AI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ans_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
